[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zkbook-pdf-builder"
version = "0.1.0"
description = "PDF build pipeline for The Seven-Layer Magic Trick."
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = []

[project.scripts]
zkbook-pdf = "zkbook_pdf.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:cacheprovider"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
